# yapgeir

./: .gitignore  Cargo.toml  README.md  deny.toml
crates/yapgeir_assets/: Cargo.toml
crates/yapgeir_assets/src/: lib.rs  png.rs
crates/yapgeir_assets/src/animations/: file.rs  mod.rs
crates/yapgeir_assets/src/atlas/: ase.rs  mod.rs
crates/yapgeir_collections/: Cargo.toml
crates/yapgeir_collections/macro/: Cargo.toml
crates/yapgeir_collections/macro/src/: lib.rs  persistent_slot_map_keys.rs
crates/yapgeir_collections/src/: indexed_map.rs  lib.rs  persistent_slot_map.rs
crates/yapgeir_core/: Cargo.toml
crates/yapgeir_core/src/: __reflection_stubs.rs  frame_stats.rs  lib.rs
crates/yapgeir_egui/: Cargo.toml
crates/yapgeir_egui/src/: lib.rs  painter.rs
crates/yapgeir_egui_painter/: Cargo.toml
crates/yapgeir_egui_painter/src/: lib.rs
crates/yapgeir_egui_sdl/: Cargo.toml
crates/yapgeir_egui_sdl/src/: lib.rs
crates/yapgeir_events/: Cargo.toml
crates/yapgeir_events/src/: lib.rs
crates/yapgeir_geometry/: Cargo.toml
crates/yapgeir_geometry/src/: lib.rs
crates/yapgeir_graphics_hal/: Cargo.toml
crates/yapgeir_graphics_hal/macro/: Cargo.toml
crates/yapgeir_graphics_hal/macro/src/: lib.rs  samplers.rs  uniforms.rs  vertex.rs
crates/yapgeir_graphics_hal/src/: buffer.rs  draw_descriptor.rs  draw_params.rs  frame_buffer.rs  index_buffer.rs  lib.rs  primitives.rs  render_buffer.rs  sampler.rs  samplers.rs  shader.rs  texture.rs  uniforms.rs  vertex_buffer.rs
crates/yapgeir_graphics_hal_gles2/: Cargo.toml
crates/yapgeir_graphics_hal_gles2/src/: blit_framebuffer.rs  buffer.rs  constants.rs  context.rs  draw_descriptor.rs  fake_default_framebuffer.rs  frame_buffer.rs  frame_buffer_blitter.rs  lib.rs  render_buffer.rs  samplers.rs  shader.rs  texture.rs  uniforms.rs
crates/yapgeir_input/: Cargo.toml
crates/yapgeir_input/src/: buttons.rs  controller.rs  keyboard.rs  lib.rs  mouse.rs
crates/yapgeir_inspector_egui/: Cargo.toml
crates/yapgeir_inspector_egui/src/: lib.rs  primitives.rs
crates/yapgeir_instrument/: Cargo.toml
crates/yapgeir_instrument/macro/: Cargo.toml
crates/yapgeir_instrument/macro/src/: instrument.rs  lib.rs
crates/yapgeir_instrument/src/: allocator.rs  lib.rs
crates/yapgeir_physics_2d/: Cargo.toml
crates/yapgeir_physics_2d/src/: acceleration.rs  lib.rs  rapier.rs  simple.rs
crates/yapgeir_realm/: Cargo.toml
crates/yapgeir_realm/macro/: Cargo.toml
crates/yapgeir_realm/macro/src/: lib.rs  system.rs
crates/yapgeir_realm/src/: commands.rs  initializer.rs  lib.rs  plugin.rs  resources.rs
crates/yapgeir_realm/src/systems/: errors.rs  filter.rs  mod.rs  param.rs
crates/yapgeir_reflection/: Cargo.toml
crates/yapgeir_reflection/src/: lib.rs
crates/yapgeir_renderer_2d/: Cargo.toml
crates/yapgeir_renderer_2d/src/: batch_renderer.rs  lib.rs  primitive_renderer.rs  quad_index_buffer.rs  sprite_renderer.rs  texture_renderer.rs
crates/yapgeir_sdl/: Cargo.toml
crates/yapgeir_sdl/src/: events.rs  input.rs  lib.rs  timer.rs  window.rs
crates/yapgeir_sdl_graphics/: Cargo.toml
crates/yapgeir_sdl_graphics/src/: lib.rs
crates/yapgeir_world_2d/: Cargo.toml
crates/yapgeir_world_2d/src/: lib.rs  sprite_sheet.rs
crates/yapgeir_world_2d_sprites/: Cargo.toml
crates/yapgeir_world_2d_sprites/src/: animation.rs  lib.rs  sprites.rs
docs/: generate.sh
examples/: 2d_sprite.rs  2d_sprite_animated.rs
