[package]
name = "yapgeir_egui"
version = "0.1.0"
edition = "2021"

[features]
instrumentation = ["dep:yapgeir_instrument"]

[dependencies]
yapgeir_core = { path = "../yapgeir_core" }
yapgeir_realm = { path = "../yapgeir_realm" }
yapgeir_events = { path = "../yapgeir_events" }
yapgeir_graphics_hal = { path = "../yapgeir_graphics_hal" }
yapgeir_instrument = { path = "../yapgeir_instrument", optional = true }
egui_sdl2_platform.workspace = true
sdl2.workspace = true
bytemuck.workspace = true
egui.workspace = true
