[package]
name = "yapgeir_input"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
yapgeir_realm = { path = "../yapgeir_realm" }
yapgeir_events = { path = "../yapgeir_events" }
derive_more.workspace = true
bitvec.workspace = true
strum.workspace = true
indexmap.workspace = true