[package]
name = "yapgeir_inspector_egui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
yapgeir_reflection= { path = "../yapgeir_reflection" }
yapgeir_realm = { path = "../yapgeir_realm" }
yapgeir_core = { path = "../yapgeir_core" }
hecs.workspace = true
egui.workspace = true
