[package]
name = "yapgeir_world_2d"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
yapgeir_reflection = { path = "../yapgeir_reflection" }
yapgeir_geometry = { path = "../yapgeir_geometry" }
nalgebra.workspace = true
derive_more.workspace = true
smart-default.workspace = true